--- a/source/ProvisionData.EntityFramework/ProvisionData.EntityFrameworkCore.csproj
+++ b/source/ProvisionData.EntityFramework/ProvisionData.EntityFrameworkCore.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>ProvisionData.EntityFramework</RootNamespace>
-    <AssemblyName>ProvisionData.EntityFramework</AssemblyName>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <RootNamespace>ProvisionData.EntityFrameworkCore</RootNamespace>
+    <AssemblyName>ProvisionData.EntityFrameworkCore</AssemblyName>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
