--- a/tests/ProvisionData.EntityFrameworkCore.IntegrationTests.PostgreSQL/ProvisionData.EntityFrameworkCore.IntegrationTests.PostgreSQL.csproj
+++ b/tests/ProvisionData.EntityFrameworkCore.IntegrationTests.PostgreSQL/ProvisionData.EntityFrameworkCore.IntegrationTests.PostgreSQL.csproj
@@ -3,20 +3,71 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>ProvisionData.EntityFrameworkCore</RootNamespace>
+		<Title>Provision Data</Title>
+		<Description>Just basic stuff</Description>
+		<Product>Provision Data</Product>
+		<Authors>Doug Wilson</Authors>
+		<Company>Provision Data Systems Inc.</Company>
+		<Copyright>Copyright 2019</Copyright>
+		<ApplicationIcon>..\..\pdsi.ico</ApplicationIcon>
+		<PackageTags></PackageTags>
+		<RepositoryType>Git</RepositoryType>
+		<RepositoryUrl>https://git.pdsint.net/PDSI/Common</RepositoryUrl>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageProjectUrl>https://wiki.pdsint.net/research-development/common</PackageProjectUrl>
+		<PackageIcon>..\..\pdsi.png</PackageIcon>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<NeutralLanguage>en-US</NeutralLanguage>
+		<NeutralResourcesLanguage>en-US</NeutralResourcesLanguage>
+
+		<LangVersion>latest</LangVersion>
+		<DebugType>full</DebugType>
 		<IsPackable>false</IsPackable>
+
+		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+		<NoWarn>1701;1702;NU5105</NoWarn>
+
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+
+		<EmbedUntrackedSources>false</EmbedUntrackedSources>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+		<None Include="..\..\pdsi.png" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+		<PackageReference Include="Respawn" Version="4.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Bogus.Tools.Analyzer" Version="33.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="GitVersion.MsBuild" Version="5.7.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Respawn" Version="4.0.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.10.56">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
