--- a/tests/ProvisionData.EntityFrameworkCore.IntegrationTests/ProvisionData.EntityFrameworkCore.IntegrationTests.csproj
+++ b/tests/ProvisionData.EntityFrameworkCore.IntegrationTests/ProvisionData.EntityFrameworkCore.IntegrationTests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
+
 		<RootNamespace>ProvisionData.EntityFrameworkCore</RootNamespace>
 		<Title>Provision Data</Title>
 		<Description>Just basic stuff</Description>
@@ -21,6 +22,7 @@
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<NeutralResourcesLanguage>en-US</NeutralResourcesLanguage>
 
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<DebugType>full</DebugType>
 		<IsPackable>false</IsPackable>
@@ -35,22 +37,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\pdsi.png" Pack="true" PackagePath="\"/>
+		<None Include="..\..\pdsi.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="33.1.1" />
-		<PackageReference Include="FluentAssertions" Version="6.1.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.10.56" />
-		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.10.56" />
+		<PackageReference Include="FluentAssertions" Version="6.2.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
 		<PackageReference Include="Serilog.Sinks.TextWriter" Version="2.1.0" />
 		<PackageReference Include="Shouldly" Version="4.0.3" />
-		<PackageReference Include="xunit" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -62,19 +60,25 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.10.56">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="coverlet.collector" Version="3.1.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
+
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\source\ProvisionData.EntityFramework\ProvisionData.EntityFrameworkCore.csproj" />
